fix circle color not changing on selecting different data type issue, change css of pop up on map to align flag & country info

--- a/src/components/custom-map/custom-map.styles.scss
+++ b/src/components/custom-map/custom-map.styles.scss
@@ -6,10 +6,6 @@
   height: 100%;
 }
 
-.country-container {
-  width: 150px;
-}
-
 .country-flag {
   height: 80px;
   width: 100%;
